# HonorControl

./: .gitignore  CHANGELOG.md  LICENSE  OVERHAUL_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Reverse engineering/: README.md  capture_honor_subscribers.js  capture_honor_touchpad.js  capture_subscribers_driver.py  ec_ram_re_prompt.md  honor_touchpad_linux.c  honor_touchpad_reverse_engineering.md
Reverse engineering/finish-trackpad-re/: protocol.json
Reverse engineering/finish-trackpad-re/linux/: PORTING_SPEC.md  README.md
Reverse engineering/finish-trackpad-re/linux/wmi/: Makefile  README.md  dkms.conf  honor_touchpad_wmi.c
docs/: architecture.md  dbus-api.md  development.md  gesture-linux-remaining-work.md  hardware-support.md  safety.md
honor_control/: __init__.py  contract.py
honor_control/backend/: __init__.py  application.py  command_queue.py  config_store.py  gesture_runtime.py  hardware.py  service.py  snapshot_store.py  supervisor.py  touchpad_firmware.py
honor_control/backend/dbus/: __init__.py  api.py  authorizer.py  codec.py
honor_control/cli/: __init__.py  honorctl.py  touchpadctl.py
honor_control/client/: __init__.py  errors.py  protocol.py  proxy.py  sdbus_client.py
honor_control/core/: __init__.py  errors.py  gestures.py  models.py  touchpad.py  validation.py
honor_control/frontend/: __init__.py
honor_control/frontend/gui/: __init__.py  app.py  controller.py  fan_curve_editor.py  main_window.py  state.py  widgets.py
honor_control/frontend/gui/pages/: __init__.py  battery.py  dashboard.py  diagnostics.py  fan.py  gestures.py  power.py  settings.py  touchpad.py
honor_control/frontend/tray/: __init__.py  tray.py
packaging/dbus/: org.honorlinux.Control1.conf  org.honorlinux.Control1.service
packaging/desktop/: org.honorlinux.Control.Tray.desktop  org.honorlinux.Control.desktop
packaging/polkit/: org.honorlinux.control.policy
packaging/systemd/: honor-control.service  honor-touchpad-restore.service  honor-touchpad-system-sleep
packaging/touchpad/: honor-touchpad.example.toml  honor-touchpadctl
scripts/: dev-run-gui.sh  dev-run-service.sh  dev-run-tray.sh  install-local.sh  install-touchpad-only.sh  smoke-test.sh  uninstall-local.sh  uninstall-touchpad-only.sh
tests/: __init__.py  test_application.py  test_backend.py  test_cli.py  test_client.py  test_config_store.py  test_core.py  test_dbus_roundtrip.py  test_gesture_runtime.py  test_gui.py  test_hardware.py  test_install_scripts.py  test_polkit.py  test_touchpad_firmware.py  test_validation.py
